<resources>
    <string name="app_name">TipCalculator</string>
    <string name="checkAmount">Check amount:</string>
    <string name="partySize">Party size:</string>
    <string name="computeTip">COMPUTE TIP</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="p15">15%</string>
    <string name="p20">20%</string>
    <string name="p25">25%</string>
</resources>
